z-index bug

--- a/src/components/CreateProjectButton/styles.module.css
+++ b/src/components/CreateProjectButton/styles.module.css
@@ -16,4 +16,5 @@
   position: fixed;
   background-color: black;
   opacity: .3;
+  z-index: 1;
 }
